# exchange-collector

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yaml
.github/workflows/: docker.yml  rust.yml
conf/: aws.yml  debug.yaml  exchange.yml  local.yaml  otel.yml  prometheus.yml
conf/grafana/dashboards/: debug.json
conf/grafana/datasources/: datasources.yaml
src/: actor.rs  channel.rs  error.rs  exporter.rs  main.rs  matches.rs  metrics.rs  pipeline.rs  processor.rs  record.rs  websocket.rs
src/delta/: exporter.rs  mod.rs
src/exchange/: binance.rs  coinbase.rs  common.rs  kucoin.rs  mod.rs  websocket.rs
src/technical_analysis/: candle.rs  candle_processor.rs  dd.rs  event.rs  event_exporter.rs  indicator_processor.rs  mod.rs  product.rs
src/utils/: serde.rs
